--- a/src/CodeOwls.ScriptProvider/CodeOwls.ScriptProvider.csproj
+++ b/src/CodeOwls.ScriptProvider/CodeOwls.ScriptProvider.csproj
@@ -73,9 +73,9 @@
     <Compile Include="Provider\FolderPathNode.cs" />
     <Compile Include="Provider\ItemPathNode.cs" />
     <Compile Include="Provider\PathResolver.cs" />
-    <Compile Include="Provider\PolarisDrive.cs" />
+    <Compile Include="Provider\ScriptProviderDrive.cs" />
     <Compile Include="Provider\ScriptProviderPathResolver.cs" />
-    <Compile Include="Provider\PolarisProvider.cs" />
+    <Compile Include="Provider\ScriptProvider.cs" />
     <Compile Include="Provider\PsObjectNodeFactory.cs" />
     <Compile Include="Provider\RootPathNode.cs" />
     <Compile Include="Provider\ScriptPathNode.cs" />
