--- a/src/CodeOwls.ScriptProvider/CodeOwls.ScriptProvider.csproj
+++ b/src/CodeOwls.ScriptProvider/CodeOwls.ScriptProvider.csproj
@@ -89,8 +89,8 @@
     <Compile Include="Nodes\NodeType.cs" />
     <Compile Include="Nodes\RootFolder.cs" />
     <Compile Include="Nodes\ScriptFolder.cs" />
-    <Compile Include="Persistence\IPersistPolarisNode.cs" />
-    <Compile Include="Persistence\PolarisException.cs" />
+    <Compile Include="Persistence\IPersistScriptProviderNode.cs" />
+    <Compile Include="Persistence\ScriptProviderException.cs" />
     <Compile Include="Persistence\ScriptPersister.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Provider\FolderPathNode.cs" />
